simulate the emb. system's binary loader with a shared-lib based update-loader.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -10,6 +10,9 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 add_executable(T1 main.cc test_access.cc test_loading.cc metadata.cc)
 
+add_library(TestLib SHARED 
+            sharedlib_test.cc)
+
 target_include_directories(T1 PUBLIC
                            "${PROJECT_BINARY_DIR}"
                            )
